masterstylesheet.css
/* whole page */
*{
    box-sizing: border-box;
}

body{
    margin: 0;
}
.container{
    max-width: 1250px;
    width: 100%;
    text-align: center;
}
/* begin header */
header{
    height: 100px;
    width: 100%;
    text-align: center;
}

.logo{
    height:100px;
    width:333px;
}
/* end header */
/* begin navigation bar  */
nav{
    background-color: #220000;
    text-align: center;
    height:50px;
    width:100%;
    line-height: 275%;
    border-bottom: 1px;
}
.navbar{
    font-family: 'Copperplate Gothic', 'Engravers MT', 'Castellar', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    color: white;
    padding:50px;
    font-size: 20px;
}
/* end navigation bar */
/* begin main images */
.image-wrapper{
    background-color: #f2ddda;
    border-bottom: 2px solid #220000;
}
.image-wrapper img{
    height: 425px;
    width: 300px;
}
.top-images{
    float: left;
    padding: 5px;
    margin: 0px;
    height: 450px;
    width:325px;
    background-color: #f2ddda;
}
.bottom-images{
    float: right;
    padding: 5px;
    margin: 0;
    height: 450px;
    width:325px;
    background-color: #f2ddda;
}

.clear{
    clear:left;
    clear:right;
}
/*end image-wrapper*/
/*begin text feature*/
.feature {
    text-align: center;
    margin: 20px;
    background-color: #f0f0ee;
    padding: 5px;
    color: #220000;
}

.feature h1 {
    text-align: center;
    font-family: 'Copperplate Gothic', 'Engravers MT', 'Castellar', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-weight: normal;
    font-size: 40px;
    border-bottom: 1px solid #220000;
    padding: 10px;
}

.feature p{
    font-size: 25px;
    padding-bottom: 50px;
}

.images{
    width: 100%;
}
.image {
    display:inline-block;
    width: 30%;
}


.text-contents {
    width: 80%;
    margin-top: 15px;
    font-style: italic;
}
.quote{
    font-size: 20px;
}

.images img {
    height: 280px;
    width: 280px;
    border-radius: 50%;
}

.button{
    float: left;
    margin: 30px;
}

.fa {
    padding: 20px;
    font-size: 50px;
    width: 50px;
    text-align: center;
    text-decoration: none;
    margin: 5px 2px;
    border-radius: 50%;
}

.fa:hover {
    opacity: 0.7;
}

.fa-facebook {
    background: #3B5998;
    color: white;
}

.fa-twitter {
    background: #55ACEE;
    color: white;
}

.fa-instagram {
    background: #125688;
    color: white;
}

footer {
    background-color:#220000;
    height: 120px;
    padding:40px;
    color:white;
    text-align: left;
    clear: both;
    
}

footer h1 {
    font-weight: normal;
    font-family: 'Copperplate Gothic', 'Engravers MT', 'Castellar', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    line-height: 5%;


}

footer li {
    list-style: none;
    margin-bottom: 0px;
    padding: 20px;
    float: right;
    line-height: 1%;
}

.bottomnav{
    font-family: 'Copperplate Gothic', 'Engravers MT', 'Castellar', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    color: white;
}

